--- a/index.html
+++ b/index.html
@@ -9,23 +9,20 @@
 	<title>Theme Clock</title>
 </head>
 <body>
-	
 	<button class="toggle">Modo Oscuro</button>
+	
+	<div class="clock-container">
 		<div class="clock">
 			<div class="needle hour"></div>
 			<div class="needle minute"></div>
 			<div class="needle second"></div>
 			<div class="center-point"></div>
 		</div>
-
-		<div class="time">12:00</div>
-		<div class="date">Monday, Nov <span class="circle">2</span></div>
-
-	<div class="clock-container">
-
+		
+		<div class="time"></div>
+		<div class="date"></div>
 	</div>
 
-
-	<script src=""></script>
+	<script src="script.js"></script>
 </body>
 </html>
